--- a/style.css
+++ b/style.css
@@ -1,3 +1,38 @@
 body {
-  background-color: aliceblue;
+  background-image:url("dj 2.jpg");
+}
+  
+table{
+  width: 100%;
+  background-color: white;
+}
+table.menu{
+  width:auto;
+  margin-right:0px; 
+  display: flex;
+  display: flex; 
+flex-direction: column; 
+align-items: center;
+}
+@media (min-width :600px) {
+  p {
+font-size: 1.25rem;
+
+  }
+
+
+@media (min-width:800px) {
+  p{
+      font-size: 1.5rem;
+      height: 1.5;
+  }
+
+h1{
+color: white;
+text-align: center;
+}
+
+footer{
+  color: white;
+  text-align: center;
 }
